1.2.0
	improve skew behavior, especially for faulty RTC; add "skew" config feature
	add support for command-dial (ATD...;) in spandsp
	add support for ATA for CED when off-hook and connected to a call
	add support for ATD for CNG when off-hook and connected to a call
	fix the ordering of the seteuid()/setegid() (Julien BLACHE)
	update spandsp to 20080725 snapshot

1.1.1
	fix unaligned errors in libiax2 (Gus Bourg)
	improve training in spandsp V.27ter receive (Steve Underwood)
	fix a potential crash (divide by zero) in spandsp V.17 receive (Steve Underwood)
1.1.0
	kill -HUP now makes the modems wait to restart when they're on-hook
	improve IAX2 call rejection when the modem is busy by using
	    REJECT instead of ACCEPT+CONGSTN+HANGUP
	add "nodaemon" config file feature
	add "iax2debug" and "dspdebug" config file features
	update spandsp to 20080110 snapshot
	update libiax2 to current iaxclient/lib/libiax2 + patches
1.0.0
	provide strndup for Solaris
0.3.2
	support dialing of DTMF and commas
	support Solaris (thanks, Bruce McAlister)
	fix receive aborts when carrier is connected
	fix +FRH:3 from appearing at improper times
	set hang-up timer on unexpected disconnections as well
	stop fast looping on registration rejection
	fix numerous training issues with V.17 rx
	update spandsp to snapshot 20070802
0.3.1
	add -F option to prevent detachment (Francesco P. Sileno)
	update spandsp to snapshot 20070619
	fix possible initial failure to register
0.3.0
	skip non-regular files in /etc/iaxmodem (Julien BLACHE)
	take caution against bad refresh negotiations from the server
	update spandsp to snapshot 20070502 (adds V.17 rx support)
	improve the ability to detect quiet signalling (spandsp: fsk min_power)
	improve the sensitivity to carrier loss (spandsp: power_meter)
	improve tcflushing when getty not reading pty and buffer fills,
	    prevents fast looping when buffer is filled
0.2.1
	update spandsp to snapshot 20070123